# ape

./: Cargo.toml  README.md  dev-doc.org
ape-cli/: Cargo.toml
ape-cli/src/: main.rs
ape-core/: Cargo.toml
ape-core/src/: config.rs  edit.rs  error.rs  git.rs  lib.rs  llm.rs  state.rs
ape-mcp-server/: Cargo.toml
ape-mcp-server/src/: main.rs  server.rs
elisp/: ape-mode.el  ape.el
examples/python/: backups.py  example_change.diff
