[package]
name = "ape-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ape-core = { version = "0.1.0", path = "../ape-core" }
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.22.0", features = ["v4"] }
