[package]
name = "ape-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.33.0", features = ["_api", "response-types", "responses"] }
base64 = "0.22.1"
diffy = "0.4.2"
dirs = "6.0.0"
env_logger = "0.11.9"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }
secret-string = "0.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = "2.7.0"
thiserror = "2.0.18"
tokio = "1.50.0"
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
