[package]
name = "ape-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
ape-core = { version = "0.1.0", path = "../ape-core" }
rmcp = { version = "1.2.0", features = ["server", "transport-io", "macros"] }
schemars = { version = "1.2.1", features = ["uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
